crates/general/fixtures/invalid/pipeline_ambiguity.zt
-- Expected: parse-error (≥1 diagnostic + lossless round-trip)
-- Spec: operator-precedence.md — mixing `|>` and `<|` without parentheses is ambiguous.
-- The parser rejects any expression that mixes forward and backward pipe unpareened.

a |> f <| b

1 |> (\x => x + 1) <| 2

x |> g <| y

f |> g <| h <| i

a |> b |> c <| d

a <| b |> c

x |> f <| g <| y

1 |> (\x => x) <| (\y => y) <| 0

value |> transform <| default

input |> validate <| fallback
